manifests/webapp-20227-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: 20227-rosa
  name: webapp-20227-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-20227
  template:
    metadata:
      labels:
        app: webapp-20227
    spec:
      serviceAccountName: webapp-20227-sa
      containers:
      - name: webapp
        image: bala1213/webapp20227:v2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        persistentVolumeClaim:
          claimName: webapp-20227-pvc
