manifests/webapp-20227-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: 20227-rosa
  name: webapp-20227-service
spec:
  selector:
    app: webapp-20227
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
