manifests/webapp-20227-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: 20227-rosa
  name: webapp-20227-route
spec:
  to:
    kind: Service
    name: webapp-20227-service
  port:
    targetPort: 5000
  tls:
    termination: edge
